-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 4.8.0-beta1
-
clang codemodel
Code completion for function pointers automatically completes with brackets:
connect(obj, &QObject::destro <CTRL + Space> completes to: connect(obj, &QObject::destroyed()
Brackets are wrong here. The original Qt Creator code model completes here only signals and the class based on type of <obj>. That would be nice to have back in the future.
| For Gerrit Dashboard: QTCREATORBUG-21305 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 242916,2 | Clang: Fix abandoning the parentheses for function | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |