Clang: Fix abandoning the parentheses for function

Was introduced in 0f96f735f0 because the the incorrect
move to the '&' character.

Task-number: QTCREATORBUG-21305
Change-Id: I55d79e68795f55b758aa95072fca10bc00d49037
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>